--- a/rere-adi/index.html
+++ b/rere-adi/index.html
@@ -125,7 +125,7 @@
                 </div>
               </div>
               <div class="profile-section-body">
-                <p>She was .</p>
+                <p>She was a woman who likes traveling. From this hoby, she changed to become an independent woman who will be teaching our children in the future.</p>
               </div>
             </div>
             <div class="profile-section-gallery col-sm-4 col-md-12 col-lg-6 col-xl-4">
@@ -164,7 +164,7 @@
                 </div>
               </div>
               <div class="profile-section-body">
-                <p>Just like reny, he was .</p>
+                <p>Just like Reny, he is a man who likes to travel. That hobbies merge them on Krakatoa mountain 4 years ago.</p>
               </div>
             </div>
             <div class="profile-section-gallery col-sm-4 col-md-12 col-lg-6 col-xl-4 order-1">
